--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@
     align-items: center;
 }
 
+
+   /* these are used to apply border inside the box  */
+   
 .box1, .box2, .box4, .box5{
     border-right:2px solid white;
     border-bottom:2px solid white;
